[package]
name = "camerata-scaffold"
edition.workspace = true
license.workspace = true
authors.workspace = true
version = "0.0.0"

# Part 1 of the Rust-fullstack PWA scaffolder (docs/plans/2026-07-09_product-owner-head-vibe-mode.md,
# sections 4 and "Feedback loop"). A leaf-ish crate: no camerata-crate deps, so the
# future orchestrator/server (Part 2) can depend on this without pulling anything else
# in. Ships the vetted Dioxus-fullstack PWA skeleton as embedded template files
# (`templates/skeleton/`, included at compile time via `include_str!` — see
# `src/skeleton.rs`) plus the `ScaffoldStrategy` fit-check seam.
[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
# Direct (non-workspace) dep, same as camerata-api-types: used only to stamp the
# `{{YEAR}}` template placeholder (`Utc::now().format("%Y")`) at scaffold time.
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
tempfile = "3"
# Only for tests: `Visibility`/`AppRequirements` serde round-trip + missing-field
# default assertions (FOLD D). Not a runtime dependency of this crate.
serde_json = { workspace = true }
