[package]
name = "camerata-server"
edition.workspace = true
license.workspace = true
authors.workspace = true
version = "0.0.0"

[lints]
workspace = true

# The Axum BFF the Dioxus cockpit talks to. The same server runs locally behind
# the desktop shell now and is the cloud-hosted API later (the long-term goal),
# so all UI-facing contracts live here as HTTP endpoints rather than in-process
# calls. Read endpoints first (rules, stories); execution + live-status stream
# land in later phases.

[[bin]]
name = "camerata-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal", "time", "process", "io-util"] }
tower = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
# Object-safe async trait for the escalation translation-driver seam (issue #43), so the
# AI-translation step is unit-testable with a fake/echo driver instead of a live model call.
async-trait = { workspace = true }
# Auto-load a gitignored .env at the repo root (standalone-server path).
dotenvy = "0.15"
# Resolve the per-user data dir to persist projects across launches.
dirs = "6"
# Whole-repo brownfield scan: download the repo tarball in ONE request and
# gunzip + untar it locally (no per-file API calls / rate-limit blowup), and a
# direct reqwest client for the binary download (the shared transport is text-only).
flate2 = "1"
tar = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# Arm: the GitHub Contents API requires file content base64-encoded.
base64 = "0.22"
# Timestamps for suppression/baseline provenance (accepted_at).
chrono = { version = "0.4", features = ["clock"] }
# PTY spawning for the in-app terminal (issue #38). Each WebSocket connection
# gets its own PTY + shell process; they die when the ws closes.
portable-pty = "0.8"

# The backend contracts the BFF exposes.
camerata-gateway = { path = "../gateway" }
camerata-worktracker = { path = "../worktracker" }
# The run engine evaluates planted tool calls through the REAL gate (deterministic,
# token-free), so a cockpit "run" shows genuine deny/allow verdicts, not narration.
camerata-core = { path = "../core" }
# The opt-in live run path (CAMERATA_LIVE_BUILD=1) runs a REAL governed fleet via
# build_from_plan; needs the lead-engineer Plan shapes and the gateway binary.
camerata-fleet = { path = "../fleet" }
camerata-intake = { path = "../intake" }
# The rule corpus: brownfield proposes corpus rules WITH their alternatives, so the
# architect chooses which alternative per rule to codify.
camerata-rules = { path = "../rules" }
# VCS-action gate configuration + bypass types (ProcessRuleConfig, build_rules, etc.).
camerata-checks = { path = "../checks" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# test-util gives start_paused so the run executor's sleeps resolve instantly in tests.
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
