[package]
name = "camerata-ui-core"
edition.workspace = true
version = "0.0.0"

[lints]
workspace = true

# Framework-agnostic UI logic + state for the cockpit (RUST-HEADLESS-CORE-1). This crate owns the
# cockpit's pure logic, data shapes, and state transitions and MUST NOT depend on any rendering
# framework (no dioxus). The compiler then guarantees it stays renderer-free and unit-testable with
# no VirtualDom. Dependencies are added only as logic is extracted; the schedule beachhead needs none.
[dependencies]
