[package]
name = "camerata-ui"
edition.workspace = true
version = "0.0.0"

[lints]
workspace = true

# The consumer-mode prototype: a runnable Dioxus DESKTOP app that walks a
# non-technical person through Intake -> Clarify -> Build -> Live.
# Mocked data only (no engine wiring yet); the goal is to nail the look,
# the motion, and the flow per docs/CONSUMER_UX.md.
#
# Target: desktop. Chosen over web to avoid the wasm toolchain for an
# artifact whose whole point is "build it, run it, screen-record it".
# Dioxus 0.7 matches the family version (rust-portfolio, rust-chorale).

[[bin]]
name = "camerata-ui"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
# `time` drives the calm Build-narrative dwell; `rt-multi-thread` lets the desktop
# shell stand up a background Tokio runtime that hosts the embedded BFF (see main.rs).
tokio = { version = "1", features = ["time", "rt-multi-thread"] }
# The cockpit is an HTTP client of the BFF (camerata-server): it fetches the story
# spine and the enforced rules over localhost rather than calling crates in-process,
# the same client/server split that makes the server cloud-hostable later.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# The real engine. The consumer app is no longer purely mocked: app_state bridges
# the screens to the typed IntakeForm / Project / RefinementSession (intake) and
# the versioned ArtifactStore (persistence).
camerata-intake = { path = "../intake" }
camerata-persistence = { path = "../persistence" }
# The governed build runner: lets the Build screen run a REAL governed fleet
# (gateway + claude -p agents) in-process, the same path the CLI po-demo uses.
camerata-fleet = { path = "../fleet" }
# The BFF the desktop shell embeds and the cockpit talks to over HTTP.
camerata-server = { path = "../server" }
# The cockpit deserializes the canonical Story spine (status etc.) from the BFF.
camerata-worktracker = { path = "../worktracker" }
# The BYO-infra publish step: the Live screen deploys through this seam.
camerata-deploy = { path = "../deploy" }
# The standing ops agent: scans the live app for dependency and security news.
camerata-maintenance = { path = "../maintenance" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
# Locate the per-user data directory so the SQLite version history persists across
# launches (platform-correct: ~/Library/Application Support on macOS, etc.).
dirs = "6"

[dev-dependencies]
tokio = { version = "1", features = ["time", "rt", "macros", "rt-multi-thread"] }
