[package]
name = "camerata-ui"
edition.workspace = true
version = "0.0.0"

[lints]
workspace = true

# The consumer-mode prototype: a runnable Dioxus DESKTOP app that walks a
# non-technical person through Intake -> Clarify -> Build -> Live.
# Mocked data only (no engine wiring yet); the goal is to nail the look,
# the motion, and the flow per docs/CONSUMER_UX.md.
#
# Target: desktop. Chosen over web to avoid the wasm toolchain for an
# artifact whose whole point is "build it, run it, screen-record it".
# Dioxus 0.7 matches the family version (rust-portfolio, rust-chorale).

[[bin]]
name = "camerata-ui"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
# `time` drives the calm Build-narrative dwell; `rt-multi-thread` lets the desktop
# shell stand up a background Tokio runtime that hosts the embedded BFF (see main.rs).
tokio = { version = "1", features = ["time", "rt-multi-thread"] }
# The cockpit is an HTTP client of the BFF (camerata-server): it fetches the story
# spine and the enforced rules over localhost rather than calling crates in-process,
# the same client/server split that makes the server cloud-hostable later.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Chorale: the headless table library (my own crate), from crates.io. Used where
# data genuinely scales — the brownfield audit-findings + proposed-rules tables —
# with the small fixed lists riding the same primitive for consistency (see
# docs/UI_BACKLOG.md for the right-sizing decision).
chorale-core = "0.2.3"
chorale-dioxus = "0.2.3"

# The BFF the desktop shell embeds and the cockpit talks to over HTTP.
camerata-server = { path = "../server" }
# The cockpit deserializes the canonical Story spine (status etc.) from the BFF.
camerata-worktracker = { path = "../worktracker" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
# Native OS folder picker for choosing the local workspace root (the visible folder
# where project repos are cloned). Async API integrates with the desktop event loop.
rfd = "0.15"
# Auto-load a gitignored .env at the repo root so secrets (the GitHub token) don't
# have to be exported into the shell before launching.
dotenvy = "0.15"
# Render the assistant's markdown replies (tables, lists, bold, code) instead of showing raw
# markdown source in the chat bubble.
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

[dev-dependencies]
tokio = { version = "1", features = ["time", "rt", "macros", "rt-multi-thread"] }
# UI testing (#112 follow-up). dioxus-ssr renders a component to an HTML string for headless
# structure assertions (Tier 1); wiremock stands up a fake BFF so the reqwest network helpers can be
# tested against CAMERATA_BFF_URL (Tier 2). No browser / wasm needed.
dioxus-ssr = "0.7"
wiremock = "0.6"
# The wiremock tests point helpers at a mock BFF via the process-global CAMERATA_BFF_URL env var.
# serial_test's shared key (#[serial(bff_env)]) serializes every such test crate-wide so they can't
# clobber each other's override under cargo's parallel test threads.
serial_test = "3"
